# idea-killer

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  EVOLUTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_analysis.py  custom_scoring.py  json_extraction.py
src/ideakiller/: __init__.py  analyzer.py  api.py  app.py  cli.py  llm.py  scorer.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_app.py  test_cli.py  test_error_handling.py  test_llm.py  test_performance.py  test_properties.py  test_scorer.py
