[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ideakiller"
version = "0.1.0"
description = "Destroy your startup idea before the market does."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "click>=8.1.7",
    "gradio>=4.26.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "bandit>=1.7.8",
]

[project.scripts]
ideakiller = "ideakiller.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ideakiller"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["B008"]

[tool.bandit]
exclude_dirs = ["tests"]
